--- a/requirements.txt
+++ b/requirements.txt
@@ -8,9 +8,9 @@ distlib==0.3.8
 Django==4.2.13
 filelock==3.14.0
 gunicorn==22.0.0
-hashtools==0.3.0
 idna==3.7
 isort==5.13.2
+length-extension-tool==0.1.0
 mccabe==0.7.0
 packaging==24.1
 pillow==10.3.0
